tests/error/hashes4.c
// fail "'##' at the beginning of a macro replacement list is illegal."
#define b ## q
